--- a/style.css
+++ b/style.css
@@ -294,9 +294,10 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     padding: 8px;
+    padding-right: 20px;
 }
 
 .hamburger {
